[gd_scene load_steps=6 format=3 uid="uid://mmhaqmvnwmyf"]

[ext_resource type="Script" path="res://UI/shop_ui.gd" id="1_hfpgg"]
[ext_resource type="FontFile" uid="uid://dgugahs6bc7so" path="res://Fonts/magofonts/mago3.ttf" id="2_w8yy6"]
[ext_resource type="AudioStream" uid="uid://dd3fvdqcwatv3" path="res://Audio/SFX/pickupCoin.wav" id="3_283g3"]
[ext_resource type="AudioStream" uid="uid://cht60ugafwdyx" path="res://Audio/Tracks/Enter Da Zombie (Demo).mp3" id="4_m1b2u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06x2b"]
bg_color = Color(0.0676867, 0.0670771, 0.0618145, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="ShopUI" type="CanvasLayer"]
script = ExtResource("1_hfpgg")
font = ExtResource("2_w8yy6")
font_size = 64

[node name="Panel" type="Panel" parent="."]
offset_left = 411.0
offset_top = 211.0
offset_right = 451.0
offset_bottom = 251.0
theme_override_styles/panel = SubResource("StyleBoxFlat_06x2b")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_left = 19.0
offset_top = 6.0
offset_right = 20.0
offset_bottom = 33.0

[node name="ShopName" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="CurrencyLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="Control" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="UpgradesContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_283g3")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_m1b2u")
max_distance = 1e+09
attenuation = 0.0
parameters/looping = true
